# mocha1995

./: .gitignore  CMakeLists.txt  CNAME  Makefile  README.md  build.sh  build_wasm.sh  index.html  makefile.win
.github/workflows/: deploy.yml
blog/: about.md
config/: config.mak  config.mk  rules.mak  rules.mk
include/: Makefile  TAGS  makefile.win  mo_atom.h  mo_bcode.h  mo_cntxt.h  mo_emit.h  mo_introspect.h  mo_java.h  mo_parse.h  mo_prvtd.h  mo_pubtd.h  mo_scan.h  mo_scope.h  mocha.def  mocha.h  mochaapi.h  mochalib.h  prarena.h  prclist.h  prdtoa.h  prglobal.h  prhash.h  prlog.h  prlong.h  prmacros.h  prmem.h  prmjtime.h  prosdep.h  prprf.h  prsync.h  prtime.h  prtypes.h  prunixos.h
src/: Makefile  alloca.c  alloca.h  log2.c  longlong.c  makefile.win  mo_array.c  mo_atom.c  mo_bcode.c  mo_bool.c  mo_cntxt.c  mo_date.c  mo_debug.c  mo_emit.c  mo_fun.c  mo_java.c  mo_link.c  mo_math.c  mo_num.c  mo_obj.c  mo_parse.c  mo_scan.c  mo_scope.c  mo_str.c  mo_web.c  mocha.c  mochaapi.c  mochalib.c  prarena.c  prdtoa.c  prhash.c  prmjtime.c  prprf.c  prtime.c  shell.html
tests/: Makefile  ack.mocha  birthday.mocha  break.mocha  catstr.js  continue.mocha  count.mocha  date.js  fact.mocha  for.mocha  fun.mocha  it.mocha  makefile.win  mo_shell.c  perfect.mocha  popbool.js  toString.mocha  unprop.js  with.mocha
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: CNAME
web/src/: App.tsx  index.css  main.tsx  store.ts  theme.ts
web/src/components/: BytecodePanel.tsx  CallStackPanel.tsx  ConsolePanel.tsx  (+6 more)
(+7 files in other folders)
